@@ -1,7 +1,7 @@
 #!/usr/bin/env perl
 
 require 5.022;
-package Squashmount v15.2.0;
+package Squashmount v15.2.1;
 
 use strict;
 use warnings;
@@ -2326,7 +2326,7 @@ my $devnull = File::Spec->devnull();
 
 # Default for the Options:
 
-my @allow_other = ('o', 'allow_other');
+my @allow_other = ('-o', 'allow_other');
 my @title = ();
 my $verbose = 0;
 my $quiet = 0;
@@ -3406,7 +3406,7 @@ sub umount_dir {
 	}
 	if($fuse // 1) {
 		return 1 if(&my_system(1, \$fusermount, 'fusermount',
-			'-u', '-l', @fopt, '--', $dir) == 0)
+			'-u', '-z', @fopt, '--', $dir) == 0)
 	}
 	unless($fuse // '') {
 		return 1 if(&my_system(1, \$umount, 'umount',
